# miniWeather

./: .gitignore  README.md
fortran/: CMakeLists.txt
fortran/scripts/scaling/: launch_sample_scaling_experiments
fortran/scripts/templates/: make_run_scripts  miniweather.run.template
fortran/scripts/viz/: sample_scaling_results.py
